# IMU-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTING  LICENSE  README.md  package.xml
config/: stim300.yaml
include/imu_simulator_package/: imu_simulator.h  imu_simulator_node.h  imu_simulator_structures.h
launch/: ground_truth_test_publisher.py  imu_simulator.launch.py
scripts/: plot_imu_simulator_allan_std.m  read_imu_simulator_csv_data.m
src/: ground_truth_test_publisher_node.cpp  imu_simulator.cpp  imu_simulator_node.cpp  imu_simulator_static_csv.cpp
test/: imu_simulator_test.cpp
